# img2mosaic-cpp

./: .gitignore  CMakeLists.txt  img2mosaic.cpp  img2mosaic.h  vcpkg.json
source/: argument.cpp  argument.hpp  img2mosaic.cpp  main.cpp
source/commands/: analysis.cpp  analysis.hpp  generation.cpp  generation.hpp
source/data/: palette.cpp  palette.hpp
source/utils/: color.cpp  color.hpp  image.cpp  image.hpp  image_section.cpp
src/: arguments.cpp  arguments.hpp  main.cpp
src/commands/: analysis.cpp  commands.hpp  generation.cpp
src/data/: image.cpp  image.hpp  image_loader.cpp  image_section.cpp  palette.cpp  palette.hpp
src/utils/: color.cpp  color.hpp  progress.cpp  progress.hpp
